k8s/1_es_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: mirlon382/mcp_diffusion:db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
          resources:
            limits:
              cpu: 2
              memory: "3Gi"
            requests:
              cpu: "500m"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 9200
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9200
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  labels:
    app: elasticsearch
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
